upload-node/kubo-private-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubo-private-deployment
  namespace: prod
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubo-private
  template:
    metadata:
      labels:
        app: kubo-private
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: lighthouse-prod-medium-node-group
      containers:
      - name: kubo-private-container
        image: 050633092828.dkr.ecr.us-east-2.amazonaws.com/prod/kubo-private
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2048Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5001
          name: "http"
        livenessProbe:
          exec:
            command:
            - ipfs
            - version
          initialDelaySeconds: 30
          periodSeconds: 60
        readinessProbe:
          exec:
            command:
            - ipfs
            - version
          initialDelaySeconds: 30
          periodSeconds: 60
