upload-node/kubo-private-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubo-private-service
  namespace: prod
  annotations:
    konghq.com/read-timeout: "1000000"
    konghq.com/connect-timeout: "1000000"
    konghq.com/write-timeout: "1000000"
spec:
  selector:
    app: kubo-private
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 5001
    targetPort: 5001
