upload-node/kubo-private-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubo-private-ingress
  namespace: prod
  labels:
    app: kubo-private
  annotations:
    # konghq.com/protocols : "https"
    # konghq.com/https-redirect-status-code : "301"
    konghq.com/strip-path: "false"
    konghq.com/plugins: "kubo-private-guard-plugin"
spec:
  ingressClassName: kong
  # tls:
  # - hosts:
  #     - upload.lighthouse.storage
  #   secretName: lighthouse-storage-tls
  rules:
    - host: upload.lighthouse.storage
      http:
        paths:
          - path: /api/v0/add
            pathType: Exact
            backend:
              service:
                name: kubo-private-service
                port:
                  number: 5001
